--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 *.vsconfig
+Assets/Plugins/ShaderGraphExtensions
+Assets/Plugins/ShaderGraphExtensions.meta
